position: fixed; / position: sticky; / display: none; / visibility: hidden; / opacity: 0;

--- a/css/differences/001.css
+++ b/css/differences/001.css
@@ -1,7 +1,7 @@
 form {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 60px);
+  grid-template-rows: repeat(5, 1fr);
 }
 
 .border {
